Fix an issue where buttons were displayed (but hidden). Vertically align dropdown button.

--- a/resources/scss/components/_sidemenu.scss
+++ b/resources/scss/components/_sidemenu.scss
@@ -43,9 +43,6 @@ $sidemenu-active-link-color: var(--color-black-90);
  * Toggle btn
  */
 .sidemenu-toggle {
-	position: absolute;
-	right: 5px;
-	top: 15px;
 	border: none;
 	background-color: transparent;
 	cursor: pointer;
@@ -53,6 +50,7 @@ $sidemenu-active-link-color: var(--color-black-90);
 	svg {
 		width: 24px;
 		height: auto;
+        background-color: #f2f2f2;
 	}
 }
 
@@ -60,18 +58,17 @@ $sidemenu-active-link-color: var(--color-black-90);
  * Item
  */
 .sidemenu-page-item {
-	position: relative;
 	display: block;
 
 	> .sidemenu-toggle {
 	}
 
 	&.sidemenu-page-item--opened {
-		> .sidemenu-nav-lvl {
+       > .sidemenu-nav-lvl {
 			display: block;
 		}
 
-		> .sidemenu-toggle {
+      > .sidemenu-link-wrapper > .sidemenu-toggle {
 			> svg {
 				transform: rotate(-180deg);
 			}
@@ -98,8 +95,8 @@ $sidemenu-active-link-color: var(--color-black-90);
 
 .sidemenu-current-page,
 .sidemenu-current-page-ancestor {
-	> .sidemenu-nav-lvl-1__link,
-	> .sidemenu-nav-lvl-2__link {
+  > .sidemenu-link-wrapper > .sidemenu-nav-lvl-1__link,
+  > .sidemenu-link-wrapper > .sidemenu-nav-lvl-2__link {
 		color: $sidemenu-active-link-color;
 		font-weight: 700;
 		border-left: 2px solid black;
@@ -119,7 +116,6 @@ $sidemenu-active-link-color: var(--color-black-90);
  */
 .sidemenu-nav-lvl-1__link {
 	display: block;
-	position: relative;
 	font-size: var(--opehuone--font-size--medium);
 	font-weight: 400;
 	line-height: calc(28 / 18);
@@ -137,7 +133,6 @@ $sidemenu-active-link-color: var(--color-black-90);
 
 .sidemenu-nav-lvl-2__link {
 	display: block;
-	position: relative;
 	font-size: var(--opehuone--font-size--normal);
 	font-weight: 400;
 	line-height: calc(24 / 16);
@@ -164,4 +159,10 @@ $sidemenu-active-link-color: var(--color-black-90);
 .sidemenu-nav-lvl-3,
 .sidemenu-nav-lvl-4 {
 	margin: 5px 0 5px 0;
+}
+
+.sidemenu-link-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
